--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -6,13 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.jain.vidhyasagarsant.ui.subCategory.master.SubCategoryListActivity">
+    tools:context="com.jain.vidhyasagarsant.ui.subCategory.master.SubCategoryListActivity"
+    android:background="@drawable/bg_01">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="@dimen/_35sdp"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:background="@drawable/bg_01">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
