--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jain.vidhyasagarsant.ui.splash.SplashActivity">
+    tools:context="com.jain.vidhyasagarsant.ui.splash.SplashActivity"
+    android:background="@drawable/acharya_vidyasagar">
 
 </RelativeLayout>
