--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -19,7 +19,8 @@
             android:layout_height="match_parent"
             android:contentDescription="@string/action_settings"
             android:scaleType="fitXY"
-            android:adjustViewBounds="true"/>
+            android:adjustViewBounds="true"
+            android:background="@drawable/bg_01"/>
 
         <TextView
             android:id="@+id/category_name"
