--- a/app/src/main/res/layout/activity_description_card.xml
+++ b/app/src/main/res/layout/activity_description_card.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_01">
 
     <com.jain.vidhyasagarsant.ui.customUiComponent.VerticalViewPager
         android:id="@+id/verticleViewPager"
