--- a/app/src/main/res/layout/activity_developer.xml
+++ b/app/src/main/res/layout/activity_developer.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@color/bg_color"
+    android:background="@drawable/bg_01"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical">
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             app:titleTextColor="@color/white"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@drawable/bg_01"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
     </android.support.design.widget.AppBarLayout>
 
@@ -48,7 +48,8 @@
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 app:contentPadding="@dimen/activity_horizontal_margin"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/transparent">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="vertical"
@@ -98,7 +99,8 @@
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 app:contentPadding="@dimen/activity_horizontal_margin"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/transparent">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="vertical"
@@ -149,7 +151,8 @@
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 app:contentPadding="@dimen/activity_horizontal_margin"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/transparent">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="vertical"
@@ -199,7 +202,8 @@
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 app:contentPadding="@dimen/activity_horizontal_margin"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/transparent">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="vertical"
@@ -249,7 +253,8 @@
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 app:contentPadding="@dimen/activity_horizontal_margin"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/transparent">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="vertical"
@@ -309,7 +314,8 @@
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 app:contentPadding="@dimen/activity_horizontal_margin"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/transparent">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="vertical"
@@ -359,7 +365,8 @@
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 app:contentPadding="@dimen/activity_horizontal_margin"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/transparent">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="vertical"
@@ -419,7 +426,8 @@
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 app:contentPadding="@dimen/activity_horizontal_margin"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/transparent">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="vertical"
@@ -470,7 +478,8 @@
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 app:contentPadding="@dimen/activity_horizontal_margin"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/transparent">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="vertical"
