--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    android:background="@drawable/bg_01">
 
     <include
         layout="@layout/app_bar_landing"
@@ -20,6 +21,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_landing"
-        app:menu="@menu/activity_landing_drawer" />
+        app:menu="@menu/activity_landing_drawer"
+        android:background="@drawable/bg_01"/>
 
 </android.support.v4.widget.DrawerLayout>
