--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.jain.vidhyasagarsant.ui.notifications.NotificationActivity">
+    tools:context="com.jain.vidhyasagarsant.ui.notifications.NotificationActivity"
+    android:background="@drawable/bg_01">
 
 </android.support.constraint.ConstraintLayout>
