--- a/app/src/main/res/layout/activity_video_list.xml
+++ b/app/src/main/res/layout/activity_video_list.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.jain.vidhyasagarsant.ui.categoryList.master.CategoryItemListActivity">
+    tools:context="com.jain.vidhyasagarsant.ui.categoryList.master.CategoryItemListActivity"
+    android:background="@drawable/bg_01">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -17,7 +18,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:background="@drawable/bg_01"/>
 
     </android.support.design.widget.AppBarLayout>
 
