--- a/app/src/main/res/layout/categoryitem_list_content.xml
+++ b/app/src/main/res/layout/categoryitem_list_content.xml
@@ -8,12 +8,12 @@
         android:id="@+id/logo"
         android:layout_margin="@dimen/text_margin"
         android:layout_width="@dimen/_40sdp"
-        android:layout_height="@dimen/_40sdp" />
+        android:layout_height="@dimen/_40sdp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/_40sdp">
         <TextView
             android:id="@+id/id"
             android:layout_width="wrap_content"
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem" />
+            android:textAppearance="?attr/textAppearanceListItem"/>
     </LinearLayout>
 
 </LinearLayout>
