--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,7 +4,8 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_01">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -13,7 +14,8 @@
         android:layout_height="match_parent"
         android:layout_margin="@dimen/_5sdp"
         card_view:cardCornerRadius="@dimen/_10sdp"
-        card_view:contentPadding="@dimen/_5sdp">
+        card_view:contentPadding="@dimen/_5sdp"
+        android:backgroundTint="@color/transparent">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -29,7 +31,9 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_220sdp"
-                android:scaleType="fitXY"/>
+                android:scaleType="fitXY"
+            android:background="@drawable/bg_01"
+            android:alpha="0.2"/>
 
             <TextView
                 android:id="@+id/title"
@@ -39,7 +43,9 @@
                 android:textSize="@dimen/text_size"
                 android:layout_marginLeft="@dimen/_5sdp"
                 android:layout_marginRight="@dimen/_5sdp"
-                android:layout_marginTop="@dimen/_10sdp"/>
+                android:layout_marginTop="@dimen/_10sdp"
+                android:background="@drawable/bg_01"
+                android:alpha="0.2"/>
 
             <TextView
                 android:id="@+id/description"
@@ -56,13 +62,14 @@
         <Button
             android:id="@+id/bottom_link"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_18sdp"
             android:layout_alignParentBottom="true"
             android:text="Complete News"
+            android:textAlignment="center"
             android:gravity="center_vertical"
             android:textSize="16sp"
             android:paddingLeft="5dp"
-            android:background="#40AAAAAA"/>
+            android:background="@drawable/bg_01"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
