--- a/app/src/main/res/layout/item_detail.xml
+++ b/app/src/main/res/layout/item_detail.xml
@@ -6,4 +6,5 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:textIsSelectable="true"
-    tools:context="com.jain.vidhyasagarsant.ui.subCategory.detail.ItemDetailFragment" />
+    tools:context="com.jain.vidhyasagarsant.ui.subCategory.detail.ItemDetailFragment"
+    android:background="@drawable/bg_01"/>
