Fixed Minor bugs. Changed UI.
Fixed Minor bugs. Changed UI.

--- a/app/src/main/res/layout/activity_categoryitem_detail.xml
+++ b/app/src/main/res/layout/activity_categoryitem_detail.xml
@@ -27,12 +27,32 @@
 
 
     </android.support.design.widget.AppBarLayout>
+    <!--    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/app_bar"
+            >
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/categoryitem_detail_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView_horizontalList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+            <android.support.v4.widget.NestedScrollView
+                android:id="@+id/categoryitem_detail_container"
+                android:layout_width="match_parent"
+                android:layout_below="@id/recyclerView_horizontalList"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+        </RelativeLayout>-->
+
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/categoryitem_detail_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
 
