--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -12,4 +12,4 @@
     tools:context="com.jain.vidhyasagarsant.ui.subCategory.master.SubCategoryListActivity"
     tools:listitem="@layout/item_list_content"
     android:layout_marginRight="@dimen/_16sdp"
-    android:background="@drawable/bg_01"/>
+    android:background="@color/transparent"/>
