--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -74,8 +74,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="+91 9893164274"
-                android:textColor="@color/black"
                 android:textSize="20dp"
+                android:textColor="#281717"
+                android:shadowColor="#e13535"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="25"
                 />
         </LinearLayout>
     </android.support.v7.widget.CardView>
@@ -104,8 +108,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="guruwar.vidyasagar@gmail.com   "
-                android:textColor="@color/black"
                 android:textSize="20dp"
+                android:textColor="#281717"
+                android:shadowColor="#e13535"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="25"
                 />
         </LinearLayout>
     </android.support.v7.widget.CardView>
@@ -133,8 +141,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="+91 9986484086"
-                android:textColor="@color/black"
                 android:textSize="20dp"
+                android:textColor="#281717"
+                android:shadowColor="#e13535"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="25"
                 />
         </LinearLayout>
     </android.support.v7.widget.CardView>
