--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_35sdp"
         android:theme="@style/AppTheme.AppBarOverlay"
-        android:background="@drawable/bg_01">
+        android:background="@color/transparent">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
