--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -17,33 +17,35 @@
             android:id="@+id/category_image"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_50sdp"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:layout_marginLeft="@dimen/_4sdp"
+            android:layout_marginRight="@dimen/_4sdp"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:layout_marginLeft="@dimen/_8sdp"
-            android:layout_marginRight="@dimen/_8sdp"
             android:adjustViewBounds="true"
             android:contentDescription="@string/action_settings"
-
             android:scaleType="fitXY" />
 
-            <TextView
-                android:id="@+id/category_name"
-                style="@style/TextAppearance.AppCompat.Headline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:gravity="center"
-                android:textSize="@dimen/_12sdp"
-                android:paddingBottom="@dimen/_5sdp"
-                android:paddingTop="@dimen/_8sdp"
-                android:text="Jai Jinendra"
-                android:shadowColor="#FBFBFB"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="5"
-                android:textColor="@color/white" />
+        <TextView
+            android:id="@+id/category_name"
+            style="@style/TextAppearance.AppCompat.Headline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="@dimen/_4sdp"
+            android:layout_marginRight="@dimen/_4sdp"
+            android:layout_below="@+id/category_image"
+            android:gravity="center"
+            android:textColor="#281717"
+            android:shadowColor="#e13535"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="45"
+            android:text="Jai Jinendra"
+            android:textSize="@dimen/_10sdp"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
