--- a/app/src/main/res/layout/categoryitem_detail.xml
+++ b/app/src/main/res/layout/categoryitem_detail.xml
@@ -10,5 +10,6 @@
         android:id="@+id/webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/border_01"
         android:layout_below="@+id/toolbar"/>
 </RelativeLayout>
