--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -27,30 +27,35 @@
             android:orientation="vertical"
             android:layout_above="@+id/bottom_link"
             android:layout_marginBottom="@dimen/_7sdp">
-        <ImageView
+            <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_220sdp"
-                android:scaleType="fitXY"
-            android:background="@drawable/bg_01"
-            android:alpha="0.2"/>
+                android:scaleType="fitXY"/>
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size"
                 android:layout_marginLeft="@dimen/_5sdp"
                 android:layout_marginRight="@dimen/_5sdp"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/bg_01"
-                android:alpha="0.2"/>
+                android:textColor="@color/dark_blue"
+                android:shadowColor="#e13535"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="25"
+                android:textSize="@dimen/text_size" />
 
             <TextView
                 android:id="@+id/description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#1e1111"
+                android:shadowColor="#e13535"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="25"
                 android:maxLines="10"
                 android:scrollbars="vertical"
                 android:layout_marginTop="@dimen/_8sdp"
@@ -59,17 +64,23 @@
                 android:textSize="16sp"/>
         </LinearLayout>
 
-        <Button
-            android:id="@+id/bottom_link"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_18sdp"
-            android:layout_alignParentBottom="true"
-            android:text="Complete News"
-            android:textAlignment="center"
-            android:gravity="center_vertical"
-            android:textSize="16sp"
-            android:paddingLeft="5dp"
-            android:background="@drawable/bg_01"/>
+            <Button
+                android:id="@+id/bottom_link"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_18sdp"
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/bg_01"
+                android:gravity="center_vertical"
+                android:paddingLeft="5dp"
+                android:text="Read More..."
+                android:shadowColor="#712723"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="25"
+                android:textAlignment="center"
+                android:textColor="#120b0b"
+                android:textSize="@dimen/_10sdp"
+                android:textStyle="bold" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
