--- a/app/src/main/res/layout/flashnews_list.xml
+++ b/app/src/main/res/layout/flashnews_list.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/categoryitem_list"
+    android:id="@+id/flashnewsitem_list"
     android:name="com.jain.vidhyasagarsant.ui.categoryList.CategoryItemListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,5 +10,5 @@
     android:layout_marginRight="@dimen/_16sdp"
     app:layoutManager="LinearLayoutManager"
     tools:context="com.jain.vidhyasagarsant.ui.categoryList.master.CategoryItemListActivity"
-    tools:listitem="@layout/categoryitem_list_content"/>
+    tools:listitem="@layout/flashnewsitem_list_content"/>
 
