--- a/app/src/main/res/layout/gallery_item_layout.xml
+++ b/app/src/main/res/layout/gallery_item_layout.xml
@@ -2,13 +2,14 @@
 <android.support.v7.widget.CardView
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     card_view:cardUseCompatPadding="true"
     card_view:cardCornerRadius="@dimen/_7sdp"
     android:layout_marginBottom="@dimen/_14sdp"
-    android:background="@drawable/bg_01">
+    android:backgroundTint="@color/transparent">
 
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -20,8 +21,10 @@
         <ImageView
             android:id="@+id/gallery_image"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_220sdp"
-            android:scaleType="fitXY"/>
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:scaleType="centerInside"
+            tools:minHeight="@dimen/_150sdp" />
 
         <TextView
             android:id="@+id/image_description"
@@ -29,7 +32,12 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/gallery_image"
             android:layout_marginTop="@dimen/_10sdp"
-            android:textSize="@dimen/_12sdp"/>
+            android:textSize="@dimen/_12sdp"
+            android:textColor="#281717"
+            android:shadowColor="#e13535"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="25"/>
 
     </RelativeLayout>
 
