--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/border_01">
     <LinearLayout
         android:id="@+id/text"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_toRightOf="@id/logo"
-        android:layout_height="@dimen/_60sdp"
-        android:background="@drawable/bg_01">
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/logo">
         <TextView
             android:id="@+id/id"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/_40sdp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/text_margin"
             android:layout_marginLeft="@dimen/text_margin"
             android:layout_marginRight="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem"
-            android:background="@drawable/bg_01"/>
+            android:textColor="#281717"
+            android:shadowColor="#e13535"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="25"
+            android:textAppearance="?attr/textAppearanceListItem" />
 
 
         <TextView
@@ -25,6 +31,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
+            android:textColor="#452727"
+            android:shadowColor="#e13535"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="25"
             android:textAppearance="?attr/textAppearanceListItem" />
     </LinearLayout>
 
@@ -35,12 +46,14 @@
         android:id="@+id/logo"
         android:scaleType="centerCrop"
         android:layout_width="120dp"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/small_text_margin"
         android:layout_marginRight="@dimen/small_text_margin"
-        android:layout_marginTop="@dimen/extra_small_text_margin"
-        android:layout_marginBottom="@dimen/extra_small_text_margin"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_01"/>
+        android:layout_marginTop="@dimen/text_margin"
+        android:layout_marginBottom="@dimen/text_margin"
+        android:elevation="10dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.8"/>
 
 
 </RelativeLayout>
