--- a/app/src/main/res/layout/nav_header_landing.xml
+++ b/app/src/main/res/layout/nav_header_landing.xml
@@ -18,7 +18,8 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@mipmap/ic_launcher_round"
-        android:backgroundTint="@color/transparent"/>
+        android:backgroundTint="@color/transparent"
+        android:scaleType="fitCenter"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -27,7 +28,7 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="विद्या सागर संत"
         android:textSize="28dp"
-        android:shadowColor="#FBFBFB"
+        android:shadowColor="#e13535"
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="25"
