--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="translucent_white">#88ffffff</color>
     <color name="fb">#3b5998</color>
     <color name="google">#d34836</color>
+    <color name="dark_blue">#030359</color>
 
     <!--Design colors-->
     <color name="red_dark">#F06423</color>
@@ -27,7 +28,7 @@
     <color name="navy_blue_dark">#1C3A4E</color>
     <color name="light_green">#78DC96</color>
     <color name="light_blue">#55C8F0</color>
-    <color name="blue_black_dark">#13171d</color>
+    <color name="blue_black_dark">#011431</color>
     <color name="blue_black_light">#516179</color>
     <color name="blue_grey_light">#A5B4C8</color>
     <color name="orange">#FFA500</color>
